sumo/tests/netconvert/import/XML/errors/broken_edge/edge#fromnode__missing4/errors.netconvert
Error: Neither the name nor the position of the from-node is given for edge '4'.
Quitting (on error).
